--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<title>CH54</title>
 </head>
 <body>
-	<h1>Hola Vero, bienvenida a la Ch54</h1>
+	<h1>Hola Tatis, bienvenida a la Ch54</h1>
 	<h2> Feliz día de vaqueros</h2>
 </body>
 </html>
